--- a/oop_sw_final/oop_sw_final.vcxproj.filters
+++ b/oop_sw_final/oop_sw_final.vcxproj.filters
@@ -357,5 +357,14 @@
     <ClCompile Include="6_6_7.cpp">
       <Filter>소스 파일\exmaple\chapter_6</Filter>
     </ClCompile>
+    <ClCompile Include="ex1.cpp">
+      <Filter>소스 파일\exmaple\chapter_8</Filter>
+    </ClCompile>
+    <ClCompile Include="ex2.cpp">
+      <Filter>소스 파일\exmaple\chapter_8</Filter>
+    </ClCompile>
+    <ClCompile Include="ex3.cpp">
+      <Filter>소스 파일\exmaple\chapter_8</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
